Attempting to deploy

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "Homepage": "https://dj620.github.io/employee-directory"
+  "homepage": "https://DJ620.github.io/employee-directory"
 }
